# time-tracker

./: .gitignore  .pre-commit-config.yaml  Makefile  data_models.py  pyproject.toml  tests.py  time_tracker.py
.github/workflows/: cicd-workflow.yml
requirements/: Gemfile
