[tool.poetry]
name = "Time Tracker"
version = "0.1.1"
authors = ["MJR"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.7.5"

babel = "2.9.1"
celery = "4.4.7"
cryptography = "3.3.2"
Django = "1.11.29"
gunicorn = "19.9.0"
ipython = "7.31.1"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "1.11.1"
django-schema-graph = "1.2.0"
ipdb = "0.13.11"
jupyter = "1.0.0"
nicelog = "0.3"

beautifulsoup4 = "4.9.3"
factory-boy = "2.12.0"
freezegun = "0.3.15"
parameterized = "0.8.1"
pytest = "4.6.11"
pytest-django = "3.10.0"
pytest-sugar = "0.9.6"
requests-mock = "1.10.0"
